--- a/WordFinder/MainWindow.xaml
+++ b/WordFinder/MainWindow.xaml
@@ -43,6 +43,7 @@
         <Button Grid.Column="4" Margin="5,5,10,5" Content="Open directory" Command="{Binding OpenDirectory}"/>
         <Button Grid.Row="1" Grid.Column="3" Margin="5" Content="Find word"  Command="{Binding ScanFindButton}"/>
         <Button Grid.Row="1" Grid.Column="4" Margin="5,5,10,5" Content="{Binding ExitStopButtonName}" Command="{Binding ExitStopButton}"/>
+        <Button Grid.Row="3" Grid.Column="4" Margin="5,5,10,5" Content="Save result" Command="{Binding SaveResultButton}"/>
         <DataGrid Grid.Row="2" Grid.ColumnSpan="5" Margin="10" ItemsSource="{Binding FileInfos}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="File name" Binding="{Binding FileName}" Width="150"/>
@@ -54,7 +55,7 @@
         <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"  Content="{Binding DisplayStatus}" FontWeight="Normal" />
         <Label Grid.Row="4"  Content="Progress"  />
         <ProgressBar Minimum="0" Maximum="100" Value="{Binding Progress}" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Height="20" IsIndeterminate="{Binding ProgressBarIndeterminate}"/>
-        <Label Content="{Binding ProgressStr}"  Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3"  HorizontalAlignment="Center" FontWeight="Normal"/>
+        <Label Content="{Binding ProgressStr}"  Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3"  HorizontalAlignment="Center" FontWeight="Normal" FontSize="11"/>
         <StackPanel Grid.Row ="4" Grid.Column="4" Orientation="Horizontal">
             <Label  Content="files found:" />
             <Label  Content="{Binding FileInfos.Count}" FontWeight="Normal"/>
