--- a/WordFinder/MainWindow.xaml
+++ b/WordFinder/MainWindow.xaml
@@ -48,7 +48,7 @@
         <TextBox Grid.Column="1" Grid.ColumnSpan="3"  Text="{Binding DirectoryPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Word,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Button Grid.Column="4" Margin="5,5,10,5" Content="Open directory" Command="{Binding OpenDirectory}"/>
-        <Button Grid.Row="1" Grid.Column="3" Margin="5" Content="Find word"  Command="{Binding ScanFindButton}"/>
+        <Button Grid.Row="1" Grid.Column="3" Margin="5" Content="Find word"  Command="{Binding FindButton}"/>
         <Button Grid.Row="1" Grid.Column="4" Margin="5,5,10,5" Content="{Binding ExitStopButtonName}" Command="{Binding ExitStopButton}"/>
         <Button Grid.Row="3" Grid.Column="4" Margin="5,5,10,5" Content="Save result" Command="{Binding SaveResultButton}"/>
         <DataGrid Name="dataGrid" Grid.Row="2" Grid.ColumnSpan="5" Margin="10" ItemsSource="{Binding FileInfos}" AutoGenerateColumns="False" IsReadOnly="True">
